--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -129,6 +129,10 @@
 
       .carousel.video {
        margin-bottom: 0;
+
+        .carousel-slide {
+          text-align: center;
+        }
       }
 
       .tab-content-container {
