hero area fixes (#432)
Co-authored-by: Charity Helms <chelms@adobe.com>

--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -134,6 +134,10 @@
 
       .carousel.video {
        margin-bottom: 0;
+
+        .carousel-slide {
+          text-align: center;
+        }
       }
 
       .tab-content-container {
