--- a/blocks/subnav/subnav.css
+++ b/blocks/subnav/subnav.css
@@ -44,6 +44,7 @@
         padding: 6px 18px 0;
         transition: all 0.2s;
         border-bottom: 6px solid transparent;
+        text-decoration: none !important;
 
         &:hover, &:focus {
           text-decoration: none;
