--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -495,6 +495,12 @@
   .carousel.featured {
     .carousel-navigation-buttons {
       position: relative;
+      top:0;
+    }
+
+    nav {
+      position: relative;
+      top: 50px;
     }
 
     .carousel-slide {
