--- a/blocks/download-filter/download-filter.css
+++ b/blocks/download-filter/download-filter.css
@@ -39,7 +39,6 @@ main > .section-outer > .section.download-cards-section {
     padding-bottom: 25px;
     position: relative;
     min-height: 190px;
-    cursor: pointer;
     flex-direction: column;
 }
 
@@ -92,6 +91,7 @@ main > .section-outer > .section.download-cards-section {
     margin: 0;
     padding-bottom: 10px;
     color: inherit;
+    text-decoration: none;
 }
 
 .download-cards .card .card-body a>p {
