moved to the embed css

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,3 +1,9 @@
+.embed-wrapper:has(.vimeo, .youtube) {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+
 .embed {
     width: unset;
     text-align: center;
