--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -7,7 +7,7 @@
   align-items: stretch;
 }
 
-.columns > div > div:has(.vimeo, .youtube) {
+.columns.video2 > div > div:nth-child(2) {
   position: relative;
   width: 100%;
   aspect-ratio: 16 / 9;
