moving the video to the 1st column

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,9 +1,12 @@
+/*
 .embed-wrapper:has(.vimeo, .youtube) {
   position: relative;
   width: 100%;
   aspect-ratio: 16 / 9;
 }
 
+
+ */
 .embed {
     width: unset;
     text-align: center;
