--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -13,7 +13,7 @@
   display: flex;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
-  overflow: scroll clip;
+  overflow: hidden;
 }
 
 .carousel .carousel-slides::-webkit-scrollbar {
@@ -62,7 +62,9 @@
     height: 368px;
     width: 100%;
       overflow: hidden;
-      display: flex;
+
+   /*   display: flex; */
+
       align-items: center;
       justify-content: center;
       border-radius: 20px;
