--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -13,7 +13,7 @@
   display: flex;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
-  overflow: scroll clip;
+  overflow: hidden;
 }
 
 .carousel .carousel-slides::-webkit-scrollbar {
@@ -62,7 +62,9 @@
     height: 368px;
     width: 100%;
       overflow: hidden;
-      display: flex;
+
+   /*   display: flex; */
+
       align-items: center;
       justify-content: center;
       border-radius: 20px;
@@ -72,7 +74,7 @@
         user-select: none;
         object-fit: cover;
         height: 100%;
-        width: 100%;
+        width: unset;
       }
     }
   }
@@ -585,7 +587,6 @@
 
       picture, picture img {
         height: unset;
-        width: 100%;
       }
       }
   }
