adding flex back

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -57,14 +57,11 @@
 
   .carousel-slide-image {
     picture {
-    /* position: relative; */
     inset: 0;
     height: 368px;
     width: 100%;
       overflow: hidden;
-
-   /*   display: flex; */
-
+     display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 20px;
