--- a/templates/homepage/homepage.css
+++ b/templates/homepage/homepage.css
@@ -98,6 +98,9 @@
 }
 
 .homepage .solutions .default-content-wrapper {
+    position: relative;
+    z-index: 100;
+    
     h2 {
         font-size: 44px;
         line-height: 1.2;
