set height on logo svg for cls fix

--- a/templates/wide/wide.css
+++ b/templates/wide/wide.css
@@ -5,6 +5,11 @@
         align-content: center;
         text-align: center;
 
+       > div:first-child img { /* product svg logo */
+            height: 59px;
+            width: auto;
+        }
+
         li {
             text-align: left;
         }
