--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -34,6 +34,7 @@ header .nav-wrapper .nav-announcement {
   z-index: 10;
   margin: 0;
   text-align: center;
+  line-height: 1.1;
 }
 
 header .nav-wrapper .nav-announcement a {
