--- a/blocks/author-info/author-info.css
+++ b/blocks/author-info/author-info.css
@@ -1,7 +1,3 @@
-.section.author-info-container{
-    margin: 0 !important;
-}
-
 .author-info {
     display: flex;
     align-items: center;
@@ -21,5 +17,11 @@
         &:hover {
             cursor: hand;
         }
+    }
+}
+
+@media screen and (width >= 1024px) {
+    .section.author-info-container{
+        margin: 0 !important;
     }
 }
