--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -11,9 +11,9 @@
   margin-top: 14px;
 }
 
-.accordion details p {
-  margin-bottom: .8em;
-  margin-top: .8em;
+.accordion details p, h2, h1 {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   width: 85%;
 }
 
@@ -56,17 +56,20 @@
 
 .accordion.round details summary,
 .accordion.border details summary {
-  color: var(--theme-accordion-txt);
-}
-
-.accordion.round details summary::after,
-.accordion.border details summary::after {
-  top: 30%;
+  >* {
+    color: var(--theme-accordion-txt);
+  }
 }
 
 .accordion details[open] summary::after {
   transform: rotate(-180deg);
   content: '-';
+}
+
+.accordion.round:not(.gray) details summary::after,
+.accordion.border:not(.gray) details summary::after {
+  top: 30%;
+  color: var(--theme-accordion-txt);
 }
 
 .accordion details .accordion-item-body {
